packages/themes/src/MenderNext/styles/main.less
/* ... */
@media screen and (max-width: 600px) {
  #app {
    min-height: 100vh;
    height: initial;
  }
}

/* General */

.green {
  color: @green;
}

.red {
  color: @red;
}

.link-color {
  color: @linkcolor;
}

.warning {
  color: @errorStyleColor !important;
  font-size: 14px !important;
}
a.warning:hover {
  color: @errorStyleColorLight !important;
}

.box-sizing (@type: border-box) {
  box-sizing: @type;
}

ul.unstyled {
  list-style: none;
  padding-left: 0;
}

time, .nowrap {
  white-space: nowrap;
}

/* Type */
.bold {
  font-weight: bold;
}

.pre-line {
  white-space: pre-line;
}

a,
span.link,
.copy-to-clipboard svg {
  font-weight: 500;
  text-decoration: none;
  color: @linkcolor;
  cursor: pointer;

  &:hover {
    color: @linkhover;
  }

  &.small {
    font-size: 13px;
  }
}

.copy-to-clipboard {
  cursor: pointer;
}

.copy-to-clipboard svg {
  opacity: 0;
  .transition(opacity 0.2s ease-in-out);
}

.copy-to-clipboard:hover svg {
  opacity: 1;
}

ul.link-list {
  .active {
    font-weight: bold;
    color: @text;
    border-bottom: 1px solid @text;
    padding-bottom: 2px;
  }

  &.horizontal {
    li {
      float: left;
      margin-right: 2 * @defaultGutterWidth;
    }
    margin-bottom: 10px;
  }
}

.capitalized {
  text-transform: capitalize;
}

.capitalized-start::first-letter {
  text-transform: capitalize;
}

.uppercased {
  text-transform: uppercase;
}

.slightly-smaller {
  font-size: 9pt;
}

.text-overflow {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.break-all {
  white-space: normal;
  word-break: break-all;
  word-wrap: break-all;
}

.hidden {
  display: none !important;
}

.relative {
  position: relative;
}
.absolute {
  position: absolute !important;
}


@directions: top, bottom, left, right;
@variants: {
  none: 0;
  x-small: 0.5 * @defaultGutterWidth;
  small: @defaultGutterWidth;
  large: 3 * @defaultGutterWidth;
  x-large: 6 * @defaultGutterWidth;
}
.margin {
  margin: 2 * @defaultGutterWidth;
}
each(@directions, .(@direction) {
  .margin-@{direction} {
    margin-@{direction}: 2 * @defaultGutterWidth;
  }
})
each(@variants, {
  .margin-@{key} {
    margin: @value;
  }
});
each(@directions, .(@direction) {
  each(@variants, .(@current-width, @variant) {
    .margin-@{direction}-@{variant} {
      margin-@{direction}: @current-width;
    }
  });
})
.padding {
  padding: 2 * @defaultGutterWidth;
}
each(@directions, .(@direction) {
  .padding-@{direction} {
    padding-@{direction}: 2 * @defaultGutterWidth;
  }
})
each(@variants, {
  .padding-@{key} {
    padding: @value;
  }
});
each(@directions, .(@direction) {
  each(@variants, .(@current-width, @variant) {
    .padding-@{direction}-@{variant} {
      padding-@{direction}: @current-width;
    }
  });
})


.inline-block {
  display: inline-block;
}

.inline {
  display: inline;
}

.align-right {
  text-align: right;
}

.align-center {
  text-align: center;
}

.clickable {
  cursor: pointer;
}

.muted {
  opacity: 0.54;
}

.fadeIn {
  .animation(fadein 0.2s 1);
}
.fadeOut {
  .opacity(0);
  .transition(opacity 0.2s linear);
}

.fadeInSlow {
  .animation(fadein 0.8s 1);
}
.fadeOutSlow {
  .opacity(0);
  .transition(opacity 0.6s linear);
}

/* Navigation */
.navLink {
  transition: all 100ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
  &.leftNav:first-of-type {
    border-top: none;
  }
}


/* Layout */

.tab-container {
  position: relative;
  padding-top: 2 * @defaultGutterWidth;
  min-height: 60vh;
  > div,
  ul {
    overflow: auto;
  }
  &.with-sub-panels {
    display: grid;
    grid-template-columns: @defaultLeftBarWidth 1fr;
  }
}
.align-self-start {
  align-self: start;
}
.align-self-end {
  align-self: end;
}
.flexbox {
  display: flex;
  &.center-aligned,
  &.centered {
    align-items: center;
  }
  &.centered {
    justify-content: center;
  }
  &.column {
    flex-direction: column;
  }
  &.space-between {
    justify-content: space-between;
  }
  &.no-basis {
    flex-basis: 0;
  }
}

.two-columns {
  display: grid;
  grid-template-columns: 1fr 1fr;
  column-gap: @defaultGutterWidth;
  &.column-data {
    max-width: 30 * @defaultGutterWidth;
    row-gap: 5px;
    &.compact {
      grid-template-columns: max-content 1fr;
    }
    &.multiple {
      grid-template-columns: 1fr 1fr;
      max-width: 30 * @defaultGutterWidth;
    }
    .key > b {
      padding: 2px 14px;
      border-radius: 10px;
    }
  }
}

.two-columns-multiple {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(max-content, 25vw));
  column-gap: @defaultGutterWidth;
  row-gap: 5px;
}

.leftFixed {
  position: relative;
}

.rightFluid {
  padding: 2 * @defaultGutterWidth;
  border-left: 1px solid @lightergrey;
}

.spaced-list > li {
  margin-top: 20px;
}

.dialog {
  .transition(width 1s ease-in-out) !important;
}

// Onboarding

.onboard {
  padding: 2 * @defaultGutterWidth @defaultGutterWidth;
  border-style: dashed;
  border-color: @placeholder;
  border-width: 2px;
  text-align: center;
  position: relative;
  background-color: inherit;

  p {
    margin-top: 0;
    font-size: 1.25em;
  }
}

// tooltips
.tooltip {
  position: absolute;
  cursor: pointer;
  .transition(all 0.4s ease-in);
  svg {
    .transition(all 0.4s ease-in);
  }
  &:hover {
    opacity: 0.54;
  }
}

.onboard-icon {
  background: @mendergreen;
  border-radius: 50%;
  height: 2 * @defaultGutterWidth;
  width: 2 * @defaultGutterWidth;
  align-items: center;
  justify-content: center;
  display: flex;
  z-index: 1000;
  color: @placeholder;
  border: white 1px solid;
  &.top,
  &.bottom {
    .animation(bouncedownup 1.3s infinite);
  }
  &.left {
    .animation(bouncerightleft 1.3s infinite);
  }
  &.right {
    .animation(bounceleftright 1.3s infinite);
  }
}

.dialog-content {
  margin: 2 * @defaultGutterWidth;
  min-height: 30vh;
}

.full-width {
  width: 100%
}

.full-height, .xterm-fullscreen {
  height: 100%;
}
.xterm-min-screen {
  min-height: 480px;
  min-width: 1000px;
}
/* ... */

